# pridepy

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pride-py.py  pridepy.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-white-paper.yml  conda-build.yml  python-app.yml  python-package.yml  python-publish.yml
aspera/etc/: aspera.conf
aspera/linux-32/: aspshell  astokengen
aspera/mac-intel/: ascmd
authentication/: authentication.py
benchmark/: benchmark.py  benchmark.sh  final_benchmark.csv
files/: files.py  raw.py
msrun/: msrun.py
paper/: infrastructure.pptx  paper.bib  paper.md
peptide/: peptide.py
pride/: search.py
pridepy/: __init__.py  pridepy.py
pridepy/aspera/key/: aspera_tokenauth_id_rsa
pridepy/aspera/linux-32/: ascmd
pridepy/aspera/linux-64/: ascmd  aspshell  astokengen
pridepy/aspera/mac-intel/: aspshell  astokengen
pridepy/authentication/: authentication.py
pridepy/files/: files.py
pridepy/project/: project.py
pridepy/spectra/: spectra.py
pridepy/statistics/: statistics.py
pridepy/tests/: test_authentication.py  test_rawFiles.py  test_raw_files.py  test_search.py
pridepy/util/: api_handling.py  file_handling.py
project/: project.py
protein/: protein.py
recipe/: meta.yaml
spectra/: spectra.py
statistics/: statistics.py
tests/: test_authentication.py  test_rawFiles.py  test_search.py  test_statistics.py
util/: __init__.py  api_handling.py  file_handling.py  filehandling.py
