[tool.poetry]
name = "pridepy"
version = "0.0.8"
description = "Python Client library for PRIDE Rest API"
authors = [
    "PRIDE Team <pride-support@ebi.ac.uk>",
]
maintainers = [
    "PRIDE Team <pride-support@ebi.ac.uk>",
]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "PRIDE",
    "proteomics",
    "mass-spectrometry",
    "API",
    "big data",
    "bioinformatics",
    "data science",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable"
]
packages = [
    { include = "pridepy" }
]
include = [
    "LICENSE",
    "README.md",
    "**/*.txt",
    "**/*.md",
    "aspera/**/*"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
ratelimit = "^2.2.1"
click = "^8.1.7"
plotly = "^5.18.0"
tqdm = "^4.66.1"
boto3 = "^1.34.0"
botocore = "^1.34.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"

[tool.poetry.urls]
PyPI = "https://pypi.org/project/pridepy/"
PRIDE = "https://www.ebi.ac.uk/pride/archive/"
Documentation = "https://github.com/PRIDE-Archive/pridepy#readme"
Repository = "https://github.com/PRIDE-Archive/pridepy"
License = "https://github.com/PRIDE-Archive/pridepy/LICENSE"

[tool.poetry.scripts]
pridepy = "pridepy:main"

[tool.black]
line-length = 99
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"